--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,3 +21,4 @@ sqlalchemy==2.0.36; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
 webargs==8.6.0; python_version >= '3.8'
 werkzeug==3.1.3; python_version >= '3.9'
+pymysql==1.0.2
